Implemented complete search

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,8 @@
         <script src="scripts/controllers/language.js"></script>
         <script src="scripts/controllers/languuage.js"></script>
         <script src="scripts/controllers/project.js"></script>
-        <script src="scripts/controllers/gallery.js"></script>
+        <script src="scripts/controllers/suggestions.js"></script>
+        <script src="scripts/controllers/suggestionDesc.js"></script>
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/projectInfo.js"></script>
         <script src="scripts/controllers/logout.js"></script>
@@ -81,11 +82,14 @@
         <script src="scripts/controllers/blogs.js"></script>
         <script src="scripts/controllers/blogsDesc.js"></script>
         <script src="scripts/controllers/ask.js"></script>
+        <script src="scripts/controllers/askDesc.js"></script>
         <script src="scripts/services/customer.js"></script>
         <script src="scripts/services/chat.js"></script>
         <script src="scripts/services/employees.js"></script>
         <script src="scripts/services/project.js"></script>
+        <script src="scripts/services/suggestions.js"></script>
         <script src="scripts/services/language.js"></script>
+        <script src="scripts/services/ask.js"></script>
         <script src="scripts/services/blogsDesc.js"></script>
         <script src="scripts/services/login.js"></script>
         <script src="scripts/services/logout.js"></script>
@@ -104,6 +108,7 @@
         
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bootbox.js"></script>
+        <script src="ace.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     
