change password Done

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,9 @@
         
 
         <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/ForgotPasswordCtrl.js"></script>
+        <script src="scripts/controllers/ChangePasswordCtrl.js"></script>
+        <script src="scripts/controllers/ConfirmPasswordCtrl.js"></script>
         <script src="scripts/controllers/employees.js"></script>
         <script src="scripts/controllers/employee.js"></script>
         <script src="scripts/controllers/EmployeessCtrl.js"></script>
